# fastapi_base

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  identifier.sqlite  main.py  pyproject.toml  requirements.txt
app/: background_main.py  main.py
app/controller/: router.py
app/core/: config.py  otel_logs.py  security.py
app/db/: database.py
app/dependencies/: authentication.py  current_user.py  email.py  exception_utils.py
app/models/: __init__.py
app/routes/: router.py
app/schemas/: __init__.py  base.py  message_schema.py  pagination.py
app/services/: crud_service.py
app/templates/: email_template.html
controllers/: auth.py  clients.py  orders.py  products.py  router.py  users.py
controllers/auth/: auth.py
controllers/orders/: order_items.py  orders.py
controllers/products/: products.py
controllers/user/: user.py
core/: security.py
db/: database.py
dependencies/: authentication.py  exception_utils.py
fastapi_base.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
migrations/: env.py
migrations/versions/: 10f7bfc57265_created_enum_types_table.py  125a0e68f041_created_orders_and_order_items_tables.py  24c06ca79a3a_removed_quantity_from_oders_table.py  41013efc885e_fixed_config_table.py  5cb86d3a087d_created_users_table.py  bd289561e9c1_created_config_table.py  d0bf325c673f_created_users_table.py  f5411e5a0722_create_users_table.py
models/: __init__.py
schemas/: __init__.py
services/: crud_service.py  user_service.py
tests/: conftest.py  test_order_items.py  test_orders.py  test_products.py  test_users.py
(+58 files in other folders)
